.metadata/.plugins/org.eclipse.cdt.ui/flash-update-firmware.build.log
19:59:04 **** Incremental Build of configuration Debug for project flash-update-firmware ****
make -j8 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F411xE -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:33:19: warning: passing argument 1 of 'flash_write_byte' makes pointer from integer without a cast [-Wint-conversion]
   33 |  flash_write_byte(0x08060000, 'a');
      |                   ^~~~~~~~~~
      |                   |
      |                   int
../Core/Src/main.c:17:29: note: expected 'void *' but argument is of type 'int'
   17 | void flash_write_byte(void* address, uint8_t data);
      |                       ~~~~~~^~~~~~~
../Core/Src/main.c: In function 'dma_init':
../Core/Src/main.c:154:24: error: 'rx_dma_buffer' undeclared (first use in this function)
  154 |  *DMA1_S7NDTR = sizeof(rx_dma_buffer);
      |                        ^~~~~~~~~~~~~
../Core/Src/main.c:154:24: note: each undeclared identifier is reported only once for each function it appears in
../Core/Src/main.c: In function 'uart_receive_handler':
../Core/Src/main.c:359:2: error: 'rx_int_buffer' undeclared (first use in this function)
  359 |  rx_int_buffer[rx_index] = *UART2_DR;
      |  ^~~~~~~~~~~~~
../Core/Src/main.c:359:16: error: 'rx_index' undeclared (first use in this function); did you mean 'rindex'?
  359 |  rx_int_buffer[rx_index] = *UART2_DR;
      |                ^~~~~~~~
      |                rindex
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j8 all" terminated with exit code 2. Build might be incomplete.

19:59:04 Build Failed. 4 errors, 1 warnings. (took 426ms)

